--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -981,4 +981,5 @@ blockquote {
   margin-top: 20px;
   font-size: 2vh;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  padding: 20px;
 }
