--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -982,4 +982,5 @@ blockquote {
   font-size: 2vh;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   padding: 20px;
+  text-align: justify;
 }
