--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -984,3 +984,16 @@ blockquote {
   padding: 10px;
   text-align:center;
 }
+
+.cid-uLmdX7T6y7 {
+    padding: 4rem 0;
+    background-color: #ffffff;
+}
+
+.cid-uLmdX7T6y7 .mbr-section-title {
+    line-height: 1.2;
+}
+
+.cid-uLmdX7T6y7 .mbr-text {
+    color: #5c5c5c;
+}
